--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ stages:
 variables:
   DOCKER_AUTH_CONFIG: $DOCKER_AUTH_CONFIG_HARBOR
 
+image: $IMAGE_REPOSITORY/python:3.11-alpine
+
 .env_before_script: &env_before_script
   before_script:
     - pip install -U pip
